dynamic tic tac toe game created with reload bug fix

--- a/tic_tac_toe_game/css/styles.css
+++ b/tic_tac_toe_game/css/styles.css
@@ -38,8 +38,8 @@ body {
     grid-row-end: 6;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .winner-display{
